--- a/templates/dashboard/groups.html
+++ b/templates/dashboard/groups.html
@@ -175,7 +175,7 @@
 </div>
 {% endblock manage_content %}
 
-{% block extra_js %}
+{% block extra_js %}{{ block.super }}
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     // Static base path for icons
